--- a/1style.css
+++ b/1style.css
@@ -55,7 +55,7 @@ nav a{
     font-size: 70px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-transform: uppercase;
-    color: rgb(235, 8, 8);
+    color: #fff;
 }
 .content-area{
     width: 100%;
